@@ -8,6 +8,7 @@ $sr_feuser_registerExtensionPath = t3lib_extMgm::extPath('sr_feuser_register');
 return array(
 	'tx_srfeuserregister_pi1' => $sr_feuser_registerExtensionPath . 'pi1/class.tx_srfeuserregister_pi1.php',
 	'tx_srfeuserregister_pi1_base' => $sr_feuser_registerExtensionPath . 'pi1/class.tx_srfeuserregister_pi1_base.php',
+	'tx_srfeuserregister_pi1_adodb_time' => $sr_feuser_registerExtensionPath . 'pi1/class.tx_srfeuserregister_pi1_adodb_time.php',
 	'tx_srfeuserregister_pi1_urlvalidator' => $sr_feuser_registerExtensionPath . 'pi1/class.tx_srfeuserregister_pi1_urlvalidator.php',
 	'tx_srfeuserregister_control_main' => $sr_feuser_registerExtensionPath . 'control/class.tx_srfeuserregister_control_main.php',
 	'tx_srfeuserregister_control' => $sr_feuser_registerExtensionPath . 'control/class.tx_srfeuserregister_control.php',
